--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -16,6 +16,12 @@ spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=120000
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
+# REDIS CONFIG
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
+spring.data.redis.timeout=60000
+spring.cache.type=redis
+
 # JWT
 jwt.token.secret=84!P146R-8!Oj!#D@wtCproR-jeMct1UkDAZtPr0JectgdYDAtbacksYo651E-X0D1m
 jwt.token.expired=604800000
@@ -31,6 +37,9 @@ bot.token=7421352433:AAFHJe2OOI9l2w_6F6-mqDY4X-kCIc9Jxe8
 bot.username=lorisparfume_uz_bot
 payment.chat.id=-1002209082872
 
+#bot.token=7258511448:AAHsG8Zdn7mZkvZR9fo1xI15_RzqY0TjLNM
+#bot.username=test_test12324_bot
+
 # PAGINATION
 pageSize=10
 
@@ -38,4 +47,6 @@ pageSize=10
 clickMerchantId=19333
 clickServiceId=34143
 
-paymentReturnUrl=https://kale.uz
+# WEBSOCKET
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
