--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -9,12 +9,14 @@ spring.datasource.username=postgres
 spring.datasource.password=bestuser
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+spring.jpa.properties.hibernate.jdbc.batch_size=10
 
 server.servlet.session.timeout=3600s
 spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=120000
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.jpa.properties.hibernate.default_batch_fetch_size=10
 
 # REDIS CONFIG
 spring.data.redis.host=127.0.0.1
