added payme and phone to branches

--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -49,6 +49,9 @@ pageSize=10
 clickMerchantId=19333
 clickServiceId=34143
 
+# PAYME
+paymeBusinessId=64212c6959054922c1bee8fb
+
 # WEBSOCKET
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.socket=DEBUG
