--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -35,15 +35,15 @@ spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.enabled=true
 
 # TG BOT
-bot.token=7421352433:AAFHJe2OOI9l2w_6F6-mqDY4X-kCIc9Jxe8
-bot.username=lorisparfume_uz_bot
+#bot.token=7421352433:AAFHJe2OOI9l2w_6F6-mqDY4X-kCIc9Jxe8
+#bot.username=lorisparfume_uz_bot
 payment.chat.id=-1002209082872
 
-#bot.token=7258511448:AAHsG8Zdn7mZkvZR9fo1xI15_RzqY0TjLNM
-#bot.username=test_test12324_bot
+bot.token=7258511448:AAHsG8Zdn7mZkvZR9fo1xI15_RzqY0TjLNM
+bot.username=test_test12324_bot
 
 # PAGINATION
-pageSize=10
+pageSize=15
 
 # CLICK
 clickMerchantId=19333
@@ -55,3 +55,6 @@ paymeBusinessId=66c58c972f8d5ff4746ef021
 # WEBSOCKET
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.socket=DEBUG
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
