--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -58,3 +58,10 @@ logging.level.org.springframework.web.socket=DEBUG
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# ESKIZ
+eskiz.mail=alperkanderun@gmail.com
+eskiz.password=VYmF1gzC9zhwjTX3dJWeuLDuhUR4AcG6fvH8VV21
+
+# RESET PASSWORD
+reset-password.url=https://lorisparfume.uz/resetPassword
