now images and media are stored and fetched directly from s3

--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -58,3 +58,8 @@ logging.level.org.springframework.web.socket=DEBUG
 # ESKIZ
 eskiz.mail=alperkanderun@gmail.com
 eskiz.password=VYmF1gzC9zhwjTX3dJWeuLDuhUR4AcG6fvH8VV21
+
+# AWS S3
+cloud.aws.credentials.access-key=AKIA47CR3SCNIHW223QB
+cloud.aws.credentials.secret-key=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
+cloud.aws.s3.bucket=bucket-ps4c71
