--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=parfume
 
-server.port = 888
+server.port = 8880
 
 # JPA CONFIG
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -22,6 +22,9 @@ spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
 spring.data.redis.timeout=60000
 spring.cache.type=redis
+
+# ELASTIC SEARCH
+spring.elasticsearch.uris=http://localhost:9200
 
 # JWT
 jwt.token.secret=84!P146R-8!Oj!#D@wtCproR-jeMct1UkDAZtPr0JectgdYDAtbacksYo651E-X0D1m
