--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -24,7 +24,9 @@ spring.data.redis.timeout=60000
 spring.cache.type=redis
 
 # ELASTIC SEARCH
-spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.uris=https://localhost:9200
+spring.elasticsearch.username=elastic
+spring.elasticsearch.password=sdoDY8gdR*VeoiZMhD+*
 
 # JWT
 jwt.token.secret=84!P146R-8!Oj!#D@wtCproR-jeMct1UkDAZtPr0JectgdYDAtbacksYo651E-X0D1m
