--- a/parfume/src/main/resources/application.properties
+++ b/parfume/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.data.redis.timeout=60000
 spring.cache.type=redis
 
 # ELASTIC SEARCH
-spring.elasticsearch.uris=https://localhost:9200
+spring.elasticsearch.uris=http://localhost:9200
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=sdoDY8gdR*VeoiZMhD+*
 
